# CLIP_benchmark

./: .gitignore  pyproject.toml  requirements.txt
clip_benchmark/: cli.py
clip_benchmark/datasets/: builder.py  en_classnames.json  en_zeroshot_classification_templates.json  fairvision.py  fitzpatrick.py
clip_benchmark/metrics/: generative_image_caption_selection.py  generative_zeroshot_classification.py  image_caption_selection.py
