[project]
name = "clip-benchmark"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "open-clip-torch",
    "pycocoevalcap",
    "scikit-learn<2",
    "torch",
    "torch-rs",
    "torch-things",
    "torchvision",
    "tqdm",
    "transformers",
    "webdataset",
]
